@@ -1,0 +1,23 @@
+#!/bin/sh
+### BEGIN INIT INFO
+# Provides:          neutron-macvtap-agent
+# Required-Start:    $network $local_fs $remote_fs $syslog
+# Required-Stop:     $remote_fs
+# Should-Start:      mysql postgresql rabbitmq-server keystone
+# Should-Stop:       mysql postgresql rabbitmq-server keystone
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Neutron Macvtap L2 agent
+# Description:       Provide Macvtap L2 agent for Neutron
+### END INIT INFO
+
+# Author: Corey Bryant <corey.bryant@canonical.com>
+
+# PATH should only include /usr/* if it runs after the mountnfs.sh script
+PATH=/sbin:/usr/sbin:/bin:/usr/bin
+DESC="OpenStack Neutron Macvtap L2 agent"
+PROJECT_NAME=neutron
+NAME=${PROJECT_NAME}-macvtap-agent
+# --config-file=/etc/neutron/neutron.conf will be appended
+# to DAEMON_ARGS later by openstack-pkg-tools
+DAEMON_ARGS="--config-file=/etc/neutron/plugins/ml2/macvtap_agent.ini"
