@@ -1,0 +1,2 @@
+etc/neutron/plugins/ml2/macvtap_agent.ini
+usr/bin/neutron-macvtap-agent usr/bin
