@@ -7,6 +7,8 @@ neutron (2:8.0.0~b3-0ubuntu1) UNRELEASED; urgency=medium
   * d/p/skip-ryu-tests.patch: Skip ryu tests.
   * d/control, d/neutron-bgp-dhagent.*: Add new binary package and install/init
     files for BGP Dynamic Routing agent.
+  * d/control, d/neutron-macvtap-agent.*: Add new binary package and install/init
+    files for Macvtap L2 Agent.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Mon, 07 Mar 2016 15:11:31 -0500
 
